--- a/_includes/archive-single-cv.html
+++ b/_includes/archive-single-cv.html
@@ -29,7 +29,9 @@
     <h3 class="archive__item-title" itemprop="headline">
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
-        {% if post.semester %}, {{ post.semester }} {% endif %}
+        {% if post.collection == 'teaching' %}
+          <p> {{ post.semester }} </p>
+        {% endif %}
       {% else %}
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
