--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -107,7 +107,7 @@
         <li><a href="{{ author.googlescholar }}"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
       {% endif %}
       {% if author.arxiv %}
-      <li><a href="{{ author.arxiv }}"><i class="ai ai-arxiv-square ai-fw"></i> arXiv</a></li>
+      <li><a href="{{ author.arxiv }}"><i class="ai ai-arxiv ai-fw"></i> arXiv</a></li>
       {% endif %}
       {% if author.pubmed %}
         <li><a href="{{ author.pubmed }}"><i class="ai ai-pubmed-square ai-fw"></i> PubMed</a></li>
