--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,8 +41,8 @@
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, {{ post.role }}, <i>{{ post.venue }}</i>, {{ post.semester }} </p>
         {% elsif post.collection == 'publications' %}
-          {% if post.venue == "preprint" %}
-          <p>{{post.venue }}, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
+          {% if post.venue == 'preprint' %}
+          <p><i>{{post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
           {% else %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
           {% endif $}
