--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -40,12 +40,10 @@
 
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, {{ post.role }}, <i>{{ post.venue }}</i>, {{ post.semester }} </p>
-        {% elsif post.collection == 'publications' %}
-          {% if post.venue == 'preprint' %}
+        {% elsif post.collection == 'publications' and post.venue == 'preprint' %}
           <p><i>{{post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
-          {% else %}
+          {% elseif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-          {% endif $}
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
