--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,7 +41,7 @@
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, {{ post.role }}, <i>{{ post.venue }}</i>, {{ post.semester }} </p>
         {% elsif post.collection == 'publications' and post.type == 'preprint' %}
-          <p><i>{{ Preprint }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
+          <p><i>Preprint</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}</p>
           {% elsif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
